--- a/个人中心.html
+++ b/个人中心.html
@@ -13,6 +13,7 @@
             position: absolute;
             left:100px;
             top:100px;
+            border-radius:3px;
         }
 
         #itemTwo {
@@ -23,6 +24,7 @@
             position: absolute;
             left:200px;
             top:100px;
+            border-radius:3px;
         }
 
         #itemThree {
@@ -33,6 +35,7 @@
             position: absolute;
             left: 360px;
             top: 100px;
+            border-radius:3px;
         }
     </style>
 
