--- a/登录.html
+++ b/登录.html
@@ -8,17 +8,23 @@
 
 <body>
     <h1 style="color: white">课业难题交流</h1>
-    <div class="background">
-        <div class="transbox">
-            <br>
-        <form method="get" action="denglu.php">
-            <input type="text" placeholder="用户名" maxlength="12" name="user"><!--输入用户名，最长12位-->
-            <br><br>
-            <input type="password" placeholder="密码" maxlength="12" name="password"><!--输入密码，最长12位-->
-            <br><br>
-            <input type="submit" value="登录"><!--登录按钮-->
-        </form>
-        </div>
-    </div>
+    <center>
+		<div class="background">
+			<center>
+				<div class="transbox">
+					<br>
+				<center>
+					<form method="get" action="denglu.php">
+						<input type="text" placeholder="用户名" maxlength="12" name="user"><!--输入用户名，最长12位-->
+						<br><br>
+						<input type="password" placeholder="密码" maxlength="12" name="password"><!--输入密码，最长12位-->
+						<br><br>
+						<input type="submit" value="登录" class="upLoad"><!--登录按钮-->
+					</form>
+				</center>
+				</div>
+			</center>
+		</div>
+	</center>
 </body>
 </html>
