--- a/个人信息.html
+++ b/个人信息.html
@@ -29,13 +29,13 @@
 
     <table>
         <tr>
-            <td>用户名：</td>
+            <td><p1>用户名：</p1></td>
         </tr>
         <tr>
-            <td>姓名：</td>
+            <td><p1>姓名：</p1></td>
         </tr>
         <tr>
-            <td>学号：</td>
+            <td><p1>学号：</p1></td>
         </tr>
     </table>
 </body>
