--- a/首页(登录).html
+++ b/首页(登录).html
@@ -27,17 +27,16 @@
         <p>我要提问</p>
     </div>
 
-    <div >
-        <div style="float: left">
+    <center>
 		<form action="sousuo.php" method="post">
-            <input type="text" placeholder="在这里搜索课程或问题" name="course">
-            <select name="select_type">
+            <input type="text" placeholder="在这里搜索课程或问题" name="course" class="search">
+            <select name="select_type" class="selection">
                 <option value="0" >课程</option>
                 <option value="1" >问题</option>
             </select>
-            <input type="submit" value="搜索">
+            <br><br>
+            <input type="submit" value="搜索" class="upLoad">
 		</form>
-        </div>
-    </div>
+    </center>
 </body>
 </html>
