--- a/个人中心.html
+++ b/个人中心.html
@@ -3,47 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>个人中心（测试版）</title>
-    <link rel="stylesheet" type="text/css" href="个人中心&个人信息.css"><!--外部样式-->
-    <style type="text/css">
-        #itemOne {
-            width: 90px;
-            height: 60px;
-            background-color: lightskyblue;
-            border:0 solid;
-            position: absolute;
-            left:100px;
-            top:100px;
-            border-radius:3px;
-        }
-
-        #itemTwo {
-            width: 150px;
-            height: 60px;
-            background-color: lightskyblue;
-            border:0 solid;
-            position: absolute;
-            left:200px;
-            top:100px;
-            border-radius:3px;
-        }
-
-        #itemThree {
-            width: 150px;
-            height: 60px;
-            background-color: lightskyblue;
-            border: 0 solid;
-            position: absolute;
-            left: 360px;
-            top: 100px;
-            border-radius:3px;
-        }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="个人中心.css"><!--外部样式-->
     <script>
         function over(obj) {
             obj.style.cssText="animation:toRotateOne 1s forwards";
         }
-
         function out(obj) {
             obj.style.cssText="animation:toRotateTwo 1s forwards";
         }
