--- a/提问.html
+++ b/提问.html
@@ -27,31 +27,35 @@
 		<p>个人中心</p>
 	</div>
 	
-	<div class="background" style="position:absolute; top:20%; left:33%">
-		<div class="transbox">
-			<br>
-		<form action="tiwen.php" method="post"  enctype="multipart/form-data">
-			所选课程：
-			<input type="text" placeholder="在这里选择题目所属的课程" list="datalist" name="course">
-			<datalist id="datalist">
-				<option>高等数学A</option>
-				<option>高等数学B</option>
-				<option>高等数学C</option>
-				<option>高等数学D</option>
-				<option>线性代数B</option>
-				<option>离散数学</option>
-				<option>程序设计与思想方法</option>
-				<option>C++程序设计</option>
-			</datalist>
-			<br>
-			<br>
-			<textarea rows="10" cols="35" placeholder="在这里输入你要提问的内容（不多于500字）" maxlength="500" name="content"></textarea>
-			<br>
-		<label for="file"></label>
-   	 	<input type="file" name="file" id="file"><br>
-		<input type="submit" name="submit" value="发表">
-		</form>
+	<center>
+		<div class="background">
+			<div class="transbox">
+				<br>
+			<form action="tiwen.php" method="post"  enctype="multipart/form-data">
+				所选课程：
+				<input type="text" placeholder="在这里选择题目所属的课程" list="datalist" name="course" class="search">
+				<datalist id="datalist">
+					<option>高等数学A</option>
+					<option>高等数学B</option>
+					<option>高等数学C</option>
+					<option>高等数学D</option>
+					<option>线性代数B</option>
+					<option>离散数学</option>
+					<option>程序设计与思想方法</option>
+					<option>C++程序设计</option>
+				</datalist>
+				<br>
+				<br>
+				<textarea rows="10" cols="35" placeholder="在这里输入你要提问的内容（不多于500字）" maxlength="500" name="content"></textarea>
+				<br>
+				<center>
+					<label for="file"></label>
+			   	 	<input type="file" name="file" id="file" class="search"><br><br>
+					<input type="submit" name="submit" value="发表" class="upLoad">
+				</center>
+			</form>
+			</div>
 		</div>
-	</div>
+	</center>
 </body>
 </html>
