--- a/注册.html
+++ b/注册.html
@@ -6,29 +6,35 @@
     <link rel="stylesheet" type="text/css" href="注册.css">
 </head>
 <body>
-    <div style="width: 500px; position: absolute; left:37%; top:20%;">
-        <center>
-            <div style="position: absolute; top:20%;">
-            <form method="post" action="zhuce.php">
-                您的身份是：
-                <input type="radio" name="user_shenfen" value="student">学生
-                <input type="radio" name="user_shenfen" value="assistant">助教
-                <input type="radio" name="user_shenfen" value="teacher">老师
-                <br><br>
-                <input type="text" placeholder="用户名" maxlength="12" name="user_id""><!--输入用户名，最长12位-->
-                <br><br>
-                <input type="password" placeholder="密码" maxlength="12" name="user_password_input"><!--输入密码，最长12位-->
-                <br><br>
-                <input type="password" placeholder="确认密码" maxlength="12" name="user_password_confirm"><!--确认密码，最长12位-->
-                <br><br>
-                <input type="text" placeholder="姓名" maxlength="12" name="user_name"><!--输入姓名-->
-                <br><br>
-                <input type="text" placeholder="学号" maxlength="12" name="user_num"><!--输入学号，最长12位-->
-                <br><br>
-                <input type="submit" value="注册" class="upLoad"><!--注册按钮-->
-                <br><br>
-            </form>
-        </center>
-    </div>
+    <center>
+        <h1>课业难题交流</h1>
+        <div class="background">
+            <center>
+                <div class="transbox">
+                    <center>
+                        <form method="post" action="zhuce.php">
+                            您的身份是：
+                            <input type="radio" name="user_shenfen" value="student">学生
+                            <input type="radio" name="user_shenfen" value="assistant">助教
+                            <input type="radio" name="user_shenfen" value="teacher">老师
+                            <br><br>
+                            <input type="text" placeholder="用户名" maxlength="12" name="user_id" class="search"><!--输入用户名，最长12位-->
+                            <br><br>
+                            <input type="password" placeholder="密码" maxlength="12" name="user_password_input" class="search"><!--输入密码，最长12位-->
+                            <br><br>
+                            <input type="password" placeholder="确认密码" maxlength="12" name="user_password_confirm" class="search"><!--确认密码，最长12位-->
+                            <br><br>
+                            <input type="text" placeholder="姓名" maxlength="12" name="user_name" class="search"><!--输入姓名-->
+                            <br><br>
+                            <input type="text" placeholder="学号" maxlength="12" name="user_num" class="search"><!--输入学号，最长12位-->
+                            <br><br>
+                            <input type="submit" value="注册" class="upLoad"><!--注册按钮-->
+                            <br><br>
+                        </form>
+                    </center>
+                </div>
+            </center>
+        </div>
+    </center>
 </body>
 </html>
