--- a/注册.html
+++ b/注册.html
@@ -14,9 +14,9 @@
                     <center>
                         <form method="post" action="zhuce.php">
                             您的身份是：
-                            <input type="radio" name="user_shenfen" value="student">学生
-                            <input type="radio" name="user_shenfen" value="assistant">助教
-                            <input type="radio" name="user_shenfen" value="teacher">老师
+                            <input type="radio" name="user_shenfen" value="student" style="cursor:pointer;">学生
+                            <input type="radio" name="user_shenfen" value="assistant" style="cursor:pointer;">助教
+                            <input type="radio" name="user_shenfen" value="teacher" style="cursor:pointer;">老师
                             <br><br>
                             <input type="text" placeholder="用户名" maxlength="12" name="user_id" class="search"><!--输入用户名，最长12位-->
                             <br><br>
