--- a/首页(登录).html
+++ b/首页(登录).html
@@ -2,7 +2,7 @@
 <html lang="ch">
 <head>
     <meta charset="UTF-8">
-    <title>首页</title>
+    <title>首页(登录）</title>
     <link rel="stylesheet" type="text/css" href="首页（登录）.css"><!--外部样式-->
     <script>
         function over(obj) {
@@ -29,6 +29,7 @@
 
     <center>
 		<form action="sousuo.php" method="post">
+            <br>
             <input type="text" placeholder="在这里搜索课程或问题" name="course" class="search">
             <select name="select_type" class="selection">
                 <option value="0" >课程</option>
