--- a/个人中心.html
+++ b/个人中心.html
@@ -3,15 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>个人中心（测试版）</title>
-    <link rel="stylesheet" type="text/css" href="个人中心.css"><!--外部样式-->
-    <script>
-        function over(obj) {
-            obj.style.cssText="animation:toRotateOne 1s forwards";
-        }
-        function out(obj) {
-            obj.style.cssText="animation:toRotateTwo 1s forwards";
-        }
-    </script>
+    <link rel="stylesheet" type="text/css" href="个人中心.css">
+    <link rel="stylesheet" type="text/css" href="public.css"><!--外部样式-->
+    <script type="text/javascript" src="动画.js"></script>
 </head>
 <body>
     <h1>课业难题交流</h1>
