--- a/提问.html
+++ b/提问.html
@@ -3,16 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>我要提问</title>
-    <link rel="stylesheet" type="text/css" href="提问.css"><!--外部样式-->
-	<script>
-        function over(obj) {
-            obj.style.cssText="animation:toRotateOne 1s forwards";
-        }
-
-        function out(obj) {
-            obj.style.cssText="animation:toRotateTwo 1s forwards";
-        }
-    </script>
+    <link rel="stylesheet" type="text/css" href="提问.css">
+	<link rel="stylesheet" type="text/css" href="public.css"><!--外部样式-->
+	<script type="text/javascript" src="动画.js"></script>
 </head>
 <body>
     <h1>课业难题交流</h1>
@@ -30,9 +23,7 @@
 	<center>
 		<div class="background">
 			<div class="transbox">
-				<br>
 			<form action="tiwen.php" method="post"  enctype="multipart/form-data">
-				所选课程：
 				<input type="text" placeholder="在这里选择题目所属的课程" list="datalist" name="course" class="search">
 				<datalist id="datalist">
 					<option>高等数学A</option>
@@ -50,7 +41,7 @@
 				<br>
 				<center>
 					<label for="file"></label>
-			   	 	<input type="file" name="file" id="file" class="search"><br><br>
+			   	 	<input type="file" name="file" id="file" class="search" style="cursor: pointer;"><br><br>
 					<input type="submit" name="submit" value="发表" class="upLoad">
 				</center>
 			</form>
