--- a/个人中心.html
+++ b/个人中心.html
@@ -20,6 +20,11 @@
         <p>我要提问</p>
     </div>
 
+    <div id="three" onclick=window.open("shouye(denglu).php") onmouseover="over(this)" onmouseout="out(this)"></div>
+    <div id="textThree">
+        <p>返回首页</p>
+    </div>
+
     <div id="itemOne" onclick=window.open("user_information.php")>
         <p>个人信息</p>
     </div>
