--- a/提问.html
+++ b/提问.html
@@ -19,7 +19,12 @@
 	<div id="textTwo">
 		<p>个人中心</p>
 	</div>
-	
+
+	<div id="three" onclick=window.open("shouye(denglu).php") onmouseover="over(this)" onmouseout="out(this)" ></div>
+	<div id="textThree">
+		<p>返回首页</p>
+	</div>
+
 	<center>
 		<div class="background">
 			<div class="transbox">
@@ -37,7 +42,7 @@
 				</datalist>
 				<br>
 				<br>
-				<textarea rows="10" cols="35" placeholder="在这里输入你要提问的内容（不多于500字）" maxlength="500" name="content"></textarea>
+				<textarea rows="7" cols="35" placeholder="在这里输入你要提问的内容（不多于500字）" maxlength="500" name="content"></textarea>
 				<br>
 				<center>
 					<label for="file"></label>
