--- a/登录.html
+++ b/登录.html
@@ -8,13 +8,7 @@
 	<style>
 		body {
 			background-image: url("picture_firstBackground.jpg");
-			background-size:100%;
-			background-repeat:no-repeat;
-			background-position: center;
-			background-attachment:fixed;
-			filter:alpha(opacity=95);
-			opacity:0.95;
-		}
+		}/*登录页面的背景*/
 	</style>
 </head>
 
@@ -39,6 +33,6 @@
 				</div>
 			</center>
 		</div>
-	</center>
+	</center><!--提供登录功能，能检验用户名是否存在，以及密码与用户名是否匹配-->
 </body>
 </html>
