--- a/个人中心.html
+++ b/个人中心.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>个人中心（测试版）</title>
+    <title>个人中心</title>
     <link rel="stylesheet" type="text/css" href="个人中心.css">
     <link rel="stylesheet" type="text/css" href="public.css"><!--外部样式-->
     <script type="text/javascript" src="动画.js"></script>
@@ -10,7 +10,7 @@
 <body>
     <h1>课业难题交流</h1>
 
-    <div id="first" onclick=window.open("首页.html") onmouseover="over(this)" onmouseout="out(this)"></div>
+    <div id="first" onclick=window.open("首页（待登录）.html") onmouseover="over(this)" onmouseout="out(this)"></div>
     <div id="textOne">
         <p>退出登录</p>
     </div>
@@ -22,21 +22,19 @@
 
     <div id="three" onclick=window.open("shouye(denglu).php") onmouseover="over(this)" onmouseout="out(this)"></div>
     <div id="textThree">
-        <p>返回首页</p>
+        <p>我要搜索</p>
     </div>
 
-    <div id="itemOne" onclick=window.open("user_information.php")>
+    <div  class="items" id="itemOne" onclick=window.open("user_information.php")>
         <p>个人信息</p>
-    </div>
+    </div><!--点击进入“个人信息”页面-->
 
-    <div id="itemTwo" onclick=window.open("myquestion.php")>
+    <div  class="items"id="itemTwo" onclick=window.open("myquestion.php")>
         <p>我提出过的问题</p>
-    </div>
+    </div><!--点击进入“我提出过的问题”页面-->
 
-    <div id="itemThree" onclick=window.open("myreply.php")>
+    <div  class="items" id="itemThree" onclick=window.open("myreply.php")>
         <p>我回答过的问题</p>
-    </div>
-</body>
-</html>
+    </div><!--点击进入“我回答过的问题”页面-->
 </body>
 </html>
